--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev -- -p 8080",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pre-commit": "npm run branch-naming-check && lint-staged",
+    "branch-naming-check": "branch-naming-check \"^(master|develop)|(feature|bugfix|refactor|ci|hotfix|jira|issue|renovate)/[a-zA-Z0-9._-]+$\"",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "12.0.1",
@@ -14,9 +17,35 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@innocells/branch-naming-check": "^1.0.0",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.33",
+    "deepmerge": "^4.2.2",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1",
     "typescript": "^4.4.4"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "coverageThreshold": {
+      "global": {
+        "statements": 100,
+        "branches": 100,
+        "functions": 100,
+        "lines": 100
+      }
+    }
   }
 }
