--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "pre-commit": "npm run branch-naming-check && lint-staged",
     "branch-naming-check": "branch-naming-check \"^(master|develop)|(feature|bugfix|refactor|ci|hotfix|jira|issue|renovate)/[a-zA-Z0-9._-]+$\"",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:unit": "jest"
   },
   "dependencies": {
     "next": "12.0.1",
@@ -32,7 +33,7 @@
     "typescript": "^4.4.4"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "./**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ]
