feat: add ProductCard component ()

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "build:css": "postcss assets/main.css -o assets/main_browser.css",
     "pre-commit": "npm run branch-naming-check && lint-staged",
     "branch-naming-check": "branch-naming-check \"^(master|develop)|(feature|bugfix|refactor|ci|hotfix|jira|issue|renovate)/[a-zA-Z0-9._-]+$\"",
     "test:watch": "jest --watch",
@@ -23,13 +24,17 @@
     "@innocells/branch-naming-check": "^1.0.0",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.33",
+    "autoprefixer": "^10.4.0",
     "deepmerge": "^4.2.2",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.2",
     "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
   },
   "lint-staged": {
