--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ecommerce-next",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "dev": "next dev -- -p 8080",
     "build": "next build",
@@ -14,6 +17,7 @@
     "test:unit": "jest"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -33,6 +37,7 @@
     "lint-staged": "^11.2.6",
     "postcss": "^8.3.11",
     "postcss-cli": "^9.0.2",
+    "postcss-nesting": "^10.0.2",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
