--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "classnames": "^2.3.1",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-ticker": "^1.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
