--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:unit": "jest"
   },
   "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "next": "12.0.1",
     "react": "17.0.2",
@@ -27,6 +28,7 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@innocells/branch-naming-check": "^1.0.0",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.33",
     "autoprefixer": "^10.4.0",
